--- a/src/Components/Main/Pokemon/pokemon.module.css
+++ b/src/Components/Main/Pokemon/pokemon.module.css
@@ -7,9 +7,10 @@
     width: 90%;
     color: black;
     border-radius: 20px;
-    position: absolute;
+    position: fixed;
     top: 150px;
     left:70px;
+    align-items: center;
     z-index: 5;
 }
 
@@ -20,7 +21,7 @@
 
 .wrapper img {
    max-width: 70%;
-    margin: 100px 30px;
+   margin: 100px 30px;
 }
 
 .wrapper img:hover {
@@ -79,14 +80,14 @@
   @media only screen and (max-width: 600px) {
     .wrapper{
       left: 30px;
-      width: 90%;
+      width: 80%;
     }
     .wrapper h1{
-        margin-left: 50px;
+        margin-left: 0px;
     }
     .wrapper img {
       width: 50%;
-      margin: 20px 20px;
+      margin: 20px 60px;
     }
     .main{
         margin: 20px 50px;
