--- a/src/Components/Nav/navigation.module.css
+++ b/src/Components/Nav/navigation.module.css
@@ -14,7 +14,12 @@
     color: gold;
 }
 
-
 .logo img{
     width: 200px;
 }
+
+@media only screen and (max-width: 600px) {
+    .logo img{
+        width: 100px;
+    }
+  }
