--- a/src/Components/Pages/pages.module.css
+++ b/src/Components/Pages/pages.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     font-size: 16px; 
+    margin-left: 25px;
 }
 
 span{
@@ -18,3 +19,4 @@ span:hover{
     border: 1px solid white;
     border-radius: 5px;
 }
+
